--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -300,7 +300,7 @@
     "even_index = l2[::2]\n",
     "\n",
     "\n",
-    "l3 = odd_index_l1 + even_index\n",
+    "l3 = odd_index + even_index\n",
     "\n",
     "print(\"List l3:\", l3)\n"
    ]
